2010-04-07  Sebastien Pouliot  <sebastien@ximian.com>

	* security/WebBasePolicyTest.cs:
	* security/WebSilverlightPolicyTest.cs:
		Adjust for API changes

2010-04-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/MultiwayBindings.cs: These tests should
	  not rely on the current culture, they need to explicitly
	  test for en-US currency formatting.

2010-04-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Update the handling of
	  indexed binding expressions to SL4 compatibility. It no
	  longer throws exceptions on negative indices or indices
	  which cannot be converted to an integer.

2010-04-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs:
	* System.Windows.Data/MultiwayBindings.cs: Add some new tests
	  for when multiple objects are twoway databound to the same
	  property on the same datasource

	* moon-unit.mdp: add new file to the mdp

2010-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* System/AppDomainTest.cs: SL4 test for IsCompatibilitySwitchSet

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Input/StylusPointCollectionTest.cs:
	  StylusPoint is a DO in native and a struct in managed, so
	  give it the same magic marshalling treatment that Matrix
	  gets.

2010-03-29  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/TabItemAutomationPeerTest.cs:
	Testing children in TabItem, when changing SelecteItem.

2010-03-25  Sebastien Pouliot  <sebastien@ximian.com>

	* security/ReflectionTest.cs (ReflectCriticalPublicClass_
	PublicStaticProperty): Use AppDomain.MonitoringIsEnabled if 
	available (SL4+) or the older Environment.CurrentDirectory
	* System/TypeTest.cs: Change test case from File.OpenWrite to
	Environment.FailFast (former is not [SecurityCritical] in SL4)
	Also use X509Certificate instead of FileInfo for .ctor test

2010-03-24  Sebastien Pouliot  <sebastien@ximian.com>
